--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
     "@rdfjs/data-model": "^1.1.2",
+    "@rdfjs/namespace": "^1.1.0",
     "@tpluscode/eslint-config": "0.0.4",
     "@types/jest": "^25.1.2",
+    "@types/rdf-ext": "^1.3.5",
+    "@types/rdfjs__namespace": "^1.1.1",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
     "cz-conventional-changelog": "^3.0.2",
