--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@zazuko/rdf-string",
+  "name": "@tpluscode/rdf-string",
   "version": "0.0.0",
-  "description": "Simplifies creating of RDF strings",
+  "description": "Simplifies creating of RDF strings using ECMAscript templates",
   "main": "dist/node/index.js",
   "module": "dist/es/index.js",
   "types": "index.d.ts",
@@ -28,6 +28,7 @@
     "@types/jest": "^25.1.2",
     "@types/rdf-ext": "^1.3.5",
     "@types/rdfjs__namespace": "^1.1.1",
+    "@types/sparqljs": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
     "cz-conventional-changelog": "^3.0.2",
@@ -35,6 +36,7 @@
     "husky": "^3.1.0",
     "jest": "^25.1.0",
     "lint-staged": "^9.5.0",
+    "sparqljs": "^3.0.1",
     "standard": "^14.3.1",
     "typescript": "^3.7.5"
   },
@@ -76,6 +78,9 @@
     "roots": [
       "<rootDir>"
     ],
-    "testRegex": "tests/.+\\.ts$"
+    "testRegex": "tests/.+\\.spec\\.ts$",
+    "setupFilesAfterEnv": [
+      "./tests/jestSetup.ts"
+    ]
   }
 }
