--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "build": "npm run build:node & npm run build:web & npm run build:types",
     "build:node": "tsc -p tsconfig.node.json",
     "build:web": "tsc -p tsconfig.es.json",
-    "build:types": "tsc -p tsconfig.json --declaration --outDir . --emitDeclarationOnly --declarationMap",
+    "build:types": "tsc -p tsconfig.json --declaration --emitDeclarationOnly --declarationMap",
     "test": "jest --coverage"
   },
+  "files": [
+    "dist",
+    "*.d.ts.map",
+    "*.d.ts",
+    "lib"
+  ],
   "dependencies": {
     "@types/rdf-js": "^2.0.11",
     "@zazuko/rdf-vocabularies": "^2020.2.3"
