--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
   "types": "index.d.ts",
   "scripts": {
     "prepack": "npm run build",
-    "build": "npm run build:node & npm run build:web & npm run build:types",
+    "build": "npm run build:node & npm run build:web",
     "build:node": "tsc -p tsconfig.node.json",
     "build:web": "tsc -p tsconfig.es.json",
-    "build:types": "tsc -p tsconfig.json --declaration --emitDeclarationOnly --declarationMap",
     "test": "jest --coverage"
   },
   "files": [
