--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@rdfjs/data-model": "^1.1.2",
     "@rdfjs/namespace": "^1.1.0",
     "@tpluscode/eslint-config": "0.0.4",
+    "@tpluscode/rdf-ns-builders": "^0.0.4",
     "@types/jest": "^25.1.2",
     "@types/rdf-ext": "^1.3.5",
     "@types/rdfjs__namespace": "^1.1.1",
