--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@commitlint/config-conventional": "^8.2.0",
     "@rdfjs/data-model": "^1.1.2",
     "@rdfjs/namespace": "^1.1.0",
+    "@rdfjs/formats-common": "^2.1.0",
     "@tpluscode/eslint-config": "0.0.4",
     "@tpluscode/rdf-ns-builders": "^0.0.4",
     "@types/jest": "^25.1.2",
     "@types/rdf-ext": "^1.3.5",
+    "@types/rdfjs__formats-common": "^2.0.0",
     "@types/rdfjs__namespace": "^1.1.1",
     "@types/sparqljs": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
@@ -44,6 +46,7 @@
     "lint-staged": "^9.5.0",
     "sparqljs": "^3.0.1",
     "standard": "^14.3.1",
+    "string-to-stream": "^3.0.1",
     "typescript": "^3.7.5"
   },
   "repository": {
