--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
     "@rdfjs/data-model": "^1.1.2",
+    "@rdfjs/dataset": "^1.0.1",
     "@rdfjs/namespace": "^1.1.0",
     "@rdfjs/formats-common": "^2.1.0",
     "@tpluscode/eslint-config": "0.0.4",
