--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tpluscode/rdf-ns-builders": "^0.0.4",
     "@types/jest": "^25.1.2",
     "@types/rdf-ext": "^1.3.5",
+    "@types/rdfjs__dataset": "^1.0",
     "@types/rdfjs__formats-common": "^2.0.0",
     "@types/rdfjs__namespace": "^1.1.1",
     "@types/sparqljs": "^2.1.0",
