--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "types": "index.d.ts",
   "scripts": {
     "prepack": "npm run build",
-    "build": "npm run build:node & npm run build:web",
+    "build": "npm run build:node; npm run build:web",
     "build:node": "tsc -p tsconfig.node.json",
     "build:web": "tsc -p tsconfig.es.json",
     "test": "jest --coverage"
