--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,4 +1,4 @@
-name: CI
+name: GitHub Pages
 
 on:
   push:
@@ -16,6 +16,6 @@ jobs:
     - name: GH Pages deploy
       uses: Cecilapp/GitHub-Pages-deploy@2.0.0
       env:
-        EMAIL: arnaud@ligny.org
+        EMAIL: tomasz@t-code.pl
         GH_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         BUILD_DIR: docs/ 
