--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,6 +12,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - run: npm ci
     - run: npx typedoc --out docs/api
     - name: GH Pages deploy
       uses: Cecilapp/GitHub-Pages-deploy@2.0.0
