--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "npm run build:node; npm run build:web",
     "build:node": "tsc -p tsconfig.node.json",
     "build:web": "tsc -p tsconfig.es.json",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "docs": "docsify serve docs"
   },
   "files": [
     "dist",
@@ -41,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
     "cz-conventional-changelog": "^3.0.2",
+    "docsify-cli": "^4.4.0",
     "eslint-plugin-jest": "^23.1.1",
     "husky": "^3.1.0",
     "jest": "^25.1.0",
@@ -52,7 +54,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/zazuko/rdf-string.git"
+    "url": "git+https://github.com/tpluscode/rdf-string.git"
   },
   "keywords": [
     "rdf",
@@ -61,9 +63,9 @@
   "author": "Tomasz Pluskiewicz <tomasz.pluskiewicz@zazuko.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/zazuko/rdf-string/issues"
+    "url": "https://github.com/tpluscode/rdf-string/issues"
   },
-  "homepage": "https://github.com/zazuko/rdf-string#readme",
+  "homepage": "https://github.com/tpluscode/rdf-string#readme",
   "publishConfig": {
     "access": "public"
   },
