--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,10 @@
   "files": [
     "src/index.ts"
   ],
-  "include": ["tests", "types"]
+  "include": ["tests", "types"],
+  "typedocOptions": {
+    "inputFiles": ["src/"],
+    "exclude": "tests/**/*.ts",
+    "excludeNotExported": true
+  }
 }
