--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,13 +12,12 @@
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "moduleResolution": "node",
-    "esModuleInterop": true,
-    "typeRoots": [ "node_modules/@types", "types" ]
+    "esModuleInterop": true
   },
   "files": [
     "src/index.ts"
   ],
-  "include": ["tests", "types"],
+  "include": ["tests"],
   "typedocOptions": {
     "inputFiles": ["src/"],
     "exclude": "tests/**/*.ts",
