--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@rdfjs/formats-common": "^2.1.0",
     "@tpluscode/eslint-config": "0.0.4",
     "@types/jest": "^25.1.2",
+    "@types/luxon": "^1.21.0",
     "@types/rdf-ext": "^1.3.5",
     "@types/rdfjs__dataset": "^1.0.0",
     "@types/rdfjs__formats-common": "^2.0.0",
@@ -48,6 +49,7 @@
     "husky": "^3.1.0",
     "jest": "^25.1.0",
     "lint-staged": "^9.5.0",
+    "luxon": "^1.22.0",
     "sparqljs": "^3.0.1",
     "standard": "^14.3.1",
     "string-to-stream": "^3.0.1",
