--- a/package.json
+++ b/package.json
@@ -2,19 +2,17 @@
   "name": "@tpluscode/rdf-string",
   "version": "0.2.8",
   "description": "Simplifies creating of RDF strings using ECMAscript templates",
-  "main": "dist/node/index.js",
-  "module": "dist/es/index.js",
+  "main": "main.js",
+  "module": "index.js",
   "types": "index.d.ts",
   "scripts": {
     "prepack": "npm run build",
-    "build": "npm run build:node; npm run build:web",
-    "build:node": "tsc -p tsconfig.node.json",
-    "build:web": "tsc -p tsconfig.es.json",
+    "build": "tsc",
     "test": "jest --coverage",
     "docs": "docsify serve docs"
   },
   "files": [
-    "dist",
+    "*.js",
     "*.d.ts.map",
     "*.d.ts",
     "lib"
@@ -23,7 +21,8 @@
     "@rdfjs/data-model": "^1.1.2",
     "@types/rdf-js": "^2.0.11",
     "@tpluscode/rdf-ns-builders": "^0.0.4",
-    "@zazuko/rdf-vocabularies": "^2020.2.3"
+    "@zazuko/rdf-vocabularies": "^2020.2.3",
+    "esm": "^3.2.25"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.8.3",
