--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "sparqljs": "^3.0.1",
     "standard": "^14.3.1",
     "string-to-stream": "^3.0.1",
+    "typedoc": "^0.17.3",
     "typescript": "^3.7.5"
   },
   "repository": {
