--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "main.js",
   "module": "index.js",
   "types": "index.d.ts",
+  "sideEffects": false,
   "scripts": {
     "prepack": "npm run build",
     "build": "tsc",
@@ -20,7 +21,7 @@
   "dependencies": {
     "@rdfjs/data-model": "^1.1.2",
     "@types/rdf-js": "^2.0.11",
-    "@tpluscode/rdf-ns-builders": "^0.0.4",
+    "@tpluscode/rdf-ns-builders": "^0.2.2",
     "@zazuko/rdf-vocabularies": "^2020.2.3",
     "esm": "^3.2.25"
   },
