--- a/package.json
+++ b/package.json
@@ -81,8 +81,7 @@
   },
   "lint-staged": {
     "*.{js,ts}": [
-      "eslint --fix --quiet",
-      "git add"
+      "eslint --fix --quiet"
     ]
   },
   "commitlint": {
