--- a/package.json
+++ b/package.json
@@ -2,58 +2,68 @@
   "name": "@tpluscode/rdf-string",
   "version": "0.2.15",
   "description": "Simplifies creating of RDF strings using ECMAscript templates",
-  "main": "main.js",
-  "module": "index.js",
+  "main": "index.js",
+  "browser": "index.mjs",
+  "module": "index.mjs",
+  "exports": {
+    "require": "./index.js",
+    "import": "./index.mjs"
+  },
   "types": "index.d.ts",
   "sideEffects": false,
   "scripts": {
     "prepack": "npm run build",
-    "build": "tsc",
+    "build": "run-p build:*",
+    "build:cjs": "tsc",
+    "build:esm": "BABEL_ENV=modules babel src --out-dir . --extensions .ts --out-file-extension .mjs",
     "test": "jest --coverage",
     "docs": "docsify serve docs"
   },
   "files": [
     "*.js",
+    "*.mjs",
     "*.d.ts.map",
     "*.d.ts",
     "lib"
   ],
   "dependencies": {
     "@rdfjs/data-model": "^1.1.2",
-    "@tpluscode/rdf-ns-builders": "^0.3.2",
-    "@zazuko/rdf-vocabularies": "^2020.2.3",
-    "esm": "^3.2.25"
+    "@tpluscode/rdf-ns-builders": "^0.3.6",
+    "@zazuko/rdf-vocabularies": "^2020.6.29"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.8.3",
-    "@babel/preset-typescript": "^7.8.3",
+    "@babel/cli": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
+    "@babel/preset-typescript": "^7.10.1",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
     "@rdfjs/dataset": "^1.0.1",
-    "@rdfjs/namespace": "^1.1.0",
     "@rdfjs/formats-common": "^2.1.0",
+    "@rdfjs/namespace": "^1.1.0",
     "@tpluscode/eslint-config": "0.0.4",
-    "@types/jest": "^25.1.2",
-    "@types/luxon": "^1.21.0",
+    "@types/jest": "^25.2.3",
+    "@types/luxon": "^1.24.0",
+    "@types/rdf-ext": "^1.3.7",
     "@types/rdf-js": "^3.0.1",
-    "@types/rdf-ext": "^1.3.5",
-    "@types/rdfjs__dataset": "^1.0.0",
+    "@types/rdfjs__dataset": "^1.0.2",
     "@types/rdfjs__formats-common": "^2.0.0",
     "@types/rdfjs__namespace": "^1.1.1",
-    "@types/sparqljs": "^2.1.0",
-    "@typescript-eslint/eslint-plugin": "^2.19.0",
-    "@typescript-eslint/parser": "^2.19.0",
-    "cz-conventional-changelog": "^3.0.2",
-    "docsify-cli": "^4.4.0",
-    "eslint-plugin-jest": "^23.1.1",
+    "@types/sparqljs": "^2.1.1",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
+    "babel-plugin-add-import-extension": "github:tpluscode/babel-plugin-add-import-extension#type-only-export",
+    "cz-conventional-changelog": "^3.2.0",
+    "docsify-cli": "^4.4.1",
+    "eslint-plugin-jest": "^23.17.1",
     "husky": "^3.1.0",
-    "jest": "^25.1.0",
+    "jest": "^25.5.4",
     "lint-staged": "^9.5.0",
-    "luxon": "^1.22.0",
+    "luxon": "^1.24.1",
+    "npm-run-all": "^4.1.5",
     "sparqljs": "^3.0.1",
-    "standard": "^14.3.1",
+    "standard": "^14.3.4",
     "string-to-stream": "^3.0.1",
-    "typedoc": "^0.17.3",
+    "typedoc": "^0.17.7",
     "typescript": "^3.9.5"
   },
   "repository": {
