--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "lib"
   ],
   "dependencies": {
-    "@rdfjs/data-model": "^1.1.2",
+    "@rdf-esm/data-model": "^0.5.3",
     "@rdf-esm/term-map": "^0.5.0",
     "@tpluscode/rdf-ns-builders": "^0.3.6",
     "@zazuko/rdf-vocabularies": "^2020.6.29"
