--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@rdfjs/dataset": "^1.0.1",
     "@rdfjs/formats-common": "^2.1.0",
     "@rdfjs/namespace": "^1.1.0",
-    "@tpluscode/eslint-config": "0.0.4",
+    "@tpluscode/eslint-config": "^0.1.0",
     "@types/jest": "^25.2.3",
     "@types/luxon": "^1.24.0",
     "@types/rdf-ext": "^1.3.7",
