build(deps): update rdf-ns-builders

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,5 +8,8 @@
   ],
   "parserOptions": {
     "project": "./tsconfig.eslint.json"
+  },
+  "rules": {
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": ["tests/**"]}]
   }
 }
