--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "@rdf-esm/data-model": "^0.5.3",
     "@rdf-esm/term-map": "^0.5.0",
-    "@tpluscode/rdf-ns-builders": "^0.3.6",
+    "@tpluscode/rdf-ns-builders": "^0.4",
     "@zazuko/rdf-vocabularies": "^2020.6.29"
   },
   "devDependencies": {
@@ -38,6 +38,7 @@
     "@babel/preset-typescript": "^7.10.1",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
+    "@rdfjs/data-model": "^1.2.0",
     "@rdfjs/dataset": "^1.0.1",
     "@rdfjs/formats-common": "^2.1.0",
     "@rdfjs/namespace": "^1.1.0",
@@ -45,7 +46,7 @@
     "@types/jest": "^25.2.3",
     "@types/luxon": "^1.24.0",
     "@types/rdf-ext": "^1.3.7",
-    "@types/rdf-js": "^3.0.1",
+    "@types/rdf-js": "^4",
     "@types/rdfjs__dataset": "^1.0.2",
     "@types/rdfjs__formats-common": "^2.0.0",
     "@types/rdfjs__namespace": "^1.1.1",
