--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,11 +12,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - run: npm ci
+    - run: yarn
     - run: npx typedoc --out docs/api
     - name: GH Pages deploy
       uses: Cecilapp/GitHub-Pages-deploy@2.0.0
       env:
         EMAIL: tomasz@t-code.pl
         GH_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        BUILD_DIR: docs/ 
+        BUILD_DIR: docs/
