--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "lib"
   ],
   "dependencies": {
+    "@rdfjs/types": "*",
     "@rdf-esm/data-model": "^0.5.3",
     "@rdf-esm/term-map": "^0.5.0",
-    "@tpluscode/rdf-ns-builders": "^0.4",
+    "@tpluscode/rdf-ns-builders": "^1",
     "@zazuko/rdf-vocabularies": "*"
   },
   "devDependencies": {
@@ -46,7 +47,6 @@
     "@types/jest": "^25.2.3",
     "@types/luxon": "^1.24.0",
     "@types/rdf-ext": "^1.3.7",
-    "@types/rdf-js": "^4",
     "@types/rdfjs__dataset": "^1.0.2",
     "@types/rdfjs__formats-common": "^2.0.0",
     "@types/rdfjs__namespace": "^1.1.1",
