--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "lib"
   ],
   "dependencies": {
-    "@rdfjs/types": "*",
     "@rdf-esm/data-model": "^0.5.3",
     "@rdf-esm/term-map": "^0.5.0",
+    "@rdfjs/types": "*",
     "@tpluscode/rdf-ns-builders": "^1",
     "@zazuko/rdf-vocabularies": "*"
   },
@@ -43,7 +43,8 @@
     "@rdfjs/dataset": "^1.0.1",
     "@rdfjs/formats-common": "^2.1.0",
     "@rdfjs/namespace": "^1.1.0",
-    "@tpluscode/eslint-config": "^0.1.0",
+    "@rdfjs/term-set": "^1.1.0",
+    "@tpluscode/eslint-config": "^0.3.0",
     "@types/jest": "^25.2.3",
     "@types/luxon": "^1.24.0",
     "@types/rdf-ext": "^1.3.7",
@@ -51,19 +52,26 @@
     "@types/rdfjs__formats-common": "^2.0.0",
     "@types/rdfjs__namespace": "^1.1.1",
     "@types/rdfjs__term-map": "^1.0.0",
+    "@types/rdfjs__term-set": "^1.0.0",
     "@types/sparqljs": "^2.1.1",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
     "babel-plugin-add-import-extension": "^1.5.1",
     "docsify-cli": "^4.4.1",
+    "eslint": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jest": "^23.17.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
     "husky": "^3.1.0",
     "jest": "^25.5.4",
     "lint-staged": "^9.5.0",
     "luxon": "^1.24.1",
     "npm-run-all": "^4.1.5",
     "sparqljs": "^3.0.1",
-    "standard": "^14.3.4",
+    "standard": "^16.0.4",
     "string-to-stream": "^3.0.1",
     "typedoc": "^0.17.7",
     "typescript": "^3.9.5"
