--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "lint-staged": "^9.5.0",
     "luxon": "^1.24.1",
     "npm-run-all": "^4.1.5",
+    "rdf-ext": "^1.3.5",
     "sparqljs": "^3.0.1",
     "standard": "^16.0.4",
     "string-to-stream": "^3.0.1",
