--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.14.5",
+    "@babel/core": "^7",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-typescript": "^7.14.5",
     "@changesets/cli": "^2.16.0",
