--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@rdf-esm/term-map": "^0.5.0",
     "@rdfjs/types": "*",
     "@tpluscode/rdf-ns-builders": "^2",
-    "@zazuko/rdf-vocabularies": "*"
+    "@zazuko/rdf-vocabularies": ">=2023.01.17"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.5",
