--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,6 @@
 {
   "extends": [ "@tpluscode" ],
   "env": {
-    "jest/globals": true
-  },
-  "plugins": [
-    "jest"
-  ],
-  "rules": {
-    "import/no-extraneous-dependencies": ["error", {"devDependencies": ["tests/**"]}]
+    "mocha": true
   }
 }
