--- a/package.json
+++ b/package.json
@@ -3,80 +3,80 @@
   "version": "0.2.27",
   "description": "Simplifies creating of RDF strings using ECMAscript templates",
   "main": "index.js",
-  "browser": "index.mjs",
-  "module": "index.mjs",
+  "type": "module",
+  "browser": "index.js",
+  "module": "index.js",
   "exports": {
-    "require": "./index.js",
-    "import": "./index.mjs"
+    ".": "./index.js"
   },
   "types": "index.d.ts",
   "sideEffects": false,
   "scripts": {
     "prepack": "npm run build",
-    "build": "run-p build:*",
-    "build:cjs": "tsc",
-    "build:esm": "BABEL_ENV=modules babel src --out-dir . --extensions .ts --out-file-extension .mjs",
-    "test": "jest --coverage",
+    "build": "tsc",
+    "lint": "eslint . --ext .ts --quiet --ignore-path .gitignore --ignore-path .eslintignore",
+    "test": "c8 --all mocha",
     "docs": "docsify serve docs",
     "release": "changeset publish"
   },
   "files": [
     "*.js",
-    "*.mjs",
     "*.d.ts.map",
     "*.d.ts",
     "lib"
   ],
   "dependencies": {
-    "@rdf-esm/data-model": "^0.5.3",
-    "@rdf-esm/term-map": "^0.5.0",
+    "@rdfjs/data-model": "^2",
+    "@rdfjs/term-map": "^2",
+    "@rdfjs/namespace": "^2.0.0",
     "@rdfjs/types": "*",
-    "@tpluscode/rdf-ns-builders": "^2",
-    "@zazuko/rdf-vocabularies": ">=2023.01.17"
+    "@zazuko/prefixes": "^1.0.0-rc.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.5",
-    "@babel/core": "^7",
-    "@babel/preset-env": "^7.14.7",
-    "@babel/preset-typescript": "^7.14.5",
     "@changesets/cli": "^2.23.0",
-    "@rdfjs/data-model": "^1.2.0",
-    "@rdfjs/dataset": "^1.0.1",
-    "@rdfjs/formats-common": "^2.1.0",
-    "@rdfjs/namespace": "^1.1.0",
-    "@rdfjs/term-set": "^1.1.0",
-    "@tpluscode/eslint-config": "^0.3.0",
-    "@types/jest": "^27.0.3",
+    "@rdfjs/dataset": "^2.0.1",
+    "@rdfjs/formats-common": "^3.1.0",
+    "@rdfjs/namespace": "^2.0.0",
+    "@rdfjs/term-set": "^2.0.1",
+    "@tpluscode/eslint-config": "^0.4.2",
+    "@tpluscode/rdf-ns-builders": "^2",
+    "@types/chai": "^4.3.4",
+    "@types/chai-snapshot-matcher": "^1",
     "@types/luxon": "^1.24.0",
-    "@types/rdf-ext": "^1.3.7",
-    "@types/rdfjs__dataset": "^1.0.2",
+    "@types/mocha": "^10.0.1",
+    "@types/rdf-ext": "^2",
+    "@types/rdfjs__dataset": "^2",
     "@types/rdfjs__formats-common": "^2.0.0",
-    "@types/rdfjs__namespace": "^1.1.1",
-    "@types/rdfjs__term-map": "^1.0.0",
-    "@types/rdfjs__term-set": "^1.0.0",
+    "@types/rdfjs__namespace": "^2",
+    "@types/rdfjs__term-map": "^2.0.2",
+    "@types/rdfjs__term-set": "^2",
     "@types/sparqljs": "^2.1.1",
-    "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
-    "babel-plugin-add-import-extension": "^1.5.1",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "c8": "^7.13.0",
+    "chai": "^4.3.7",
+    "chai-snapshot-matcher": "^2.0.3",
     "docsify-cli": "^4.4.1",
     "eslint": "^8.3.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jest": "^25.3.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-require-extensions": "^0.1.2",
     "husky": "^3.1.0",
-    "jest": "^27.4.3",
     "lint-staged": "^13.0.2",
     "luxon": "^1.24.1",
+    "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
-    "rdf-ext": "^1.3.5",
+    "rdf-ext": "^2",
     "sparqljs": "^3.0.1",
-    "standard": "^16.0.4",
+    "standard": "^17.0.0",
     "string-to-stream": "^3.0.1",
+    "ts-node": "^10.9.1",
     "typedoc": "^0.17.7",
-    "typescript": "^3.9.5"
+    "typescript": "^4"
   },
   "repository": {
     "type": "git",
@@ -105,16 +105,26 @@
       "eslint --fix --quiet"
     ]
   },
+  "mocha": {
+    "extension": "ts",
+    "loader": "ts-node/esm"
+  },
   "jest": {
     "roots": [
       "<rootDir>"
     ],
+    "extensionsToTreatAsEsm": [".ts"],
+    "transform": {
+      "^.+\\.tsx?$": [
+        "ts-jest",
+        {
+          "useESM": true
+        }
+      ]
+    },
     "testRegex": "tests/.+\\.spec\\.ts$",
     "setupFilesAfterEnv": [
       "./tests/jestSetup.ts"
-    ],
-    "moduleNameMapper": {
-      "@rdf-esm/(.*)": "@rdfjs/$1"
-    }
+    ]
   }
 }
