--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "module": "CommonJS",
-    "target": "es2018",
+    "module": "ES2020",
+    "target": "es2020",
     "lib": [
+      "DOM",
       "es6",
       "esnext"
     ],
@@ -20,7 +21,6 @@
   "files": [
     "src/index.ts"
   ],
-  "include": ["tests"],
   "typedocOptions": {
     "inputFiles": ["src/"],
     "exclude": "tests/**/*.ts",
