--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "types": "index.d.ts",
   "sideEffects": false,
   "scripts": {
+    "postinstall": "patch-package",
     "prepack": "npm run build",
     "build": "tsc",
     "lint": "eslint . --ext .ts --quiet --ignore-path .gitignore --ignore-path .eslintignore",
@@ -70,6 +71,8 @@
     "luxon": "^1.24.1",
     "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
+    "patch-package": "^6.5.1",
+    "postinstall-postinstall": "^2.1.0",
     "rdf-ext": "^2",
     "sparqljs": "^3.0.1",
     "standard": "^17.0.0",
