--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@rdfjs/term-map": "^2",
     "@rdfjs/namespace": "^2.0.0",
     "@rdfjs/types": "*",
-    "@zazuko/prefixes": "^1.0.0-rc.0"
+    "@zazuko/prefixes": ">=1"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.1",
@@ -39,7 +39,7 @@
     "@rdfjs/namespace": "^2.0.0",
     "@rdfjs/term-set": "^2.0.1",
     "@tpluscode/eslint-config": "^0.4.2",
-    "@tpluscode/rdf-ns-builders": "^2",
+    "@tpluscode/rdf-ns-builders": "^4",
     "@types/chai": "^4.3.4",
     "@types/chai-snapshot-matcher": "^1",
     "@types/luxon": "^1.24.0",
