--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        node: [ '16', '18' ]
+        node: [ '16', '18', '20' ]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
