--- a/package.json
+++ b/package.json
@@ -26,53 +26,33 @@
     "lib"
   ],
   "dependencies": {
-    "@rdfjs/data-model": "^2",
-    "@rdfjs/term-map": "^2",
-    "@rdfjs/namespace": "^2.0.0",
+    "@zazuko/env": "^1.5.2",
     "@rdfjs/types": "*",
     "@zazuko/prefixes": ">=1"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.1",
-    "@rdfjs/dataset": "^2.0.1",
     "@rdfjs/formats-common": "^3.1.0",
-    "@rdfjs/namespace": "^2.0.0",
-    "@rdfjs/term-set": "^2.0.1",
     "@tpluscode/eslint-config": "^0.4.2",
     "@tpluscode/rdf-ns-builders": "^4",
     "@types/chai": "^4.3.4",
     "@types/chai-snapshot-matcher": "^1",
     "@types/luxon": "^1.24.0",
     "@types/mocha": "^10.0.1",
-    "@types/rdf-ext": "^2",
-    "@types/rdfjs__dataset": "^2",
-    "@types/rdfjs__formats-common": "^2.0.0",
-    "@types/rdfjs__namespace": "^2",
-    "@types/rdfjs__term-map": "^2.0.2",
-    "@types/rdfjs__term-set": "^2",
     "@types/sparqljs": "^2.1.1",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
     "c8": "^7.13.0",
     "chai": "^4.3.7",
     "chai-snapshot-matcher": "^2.0.3",
     "docsify-cli": "^4.4.1",
-    "eslint": "^8.3.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-import-resolver-typescript": "^3.5.3",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.6.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-require-extensions": "^0.1.2",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "husky": "^3.1.0",
     "lint-staged": "^13.0.2",
     "luxon": "^1.24.1",
     "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
-    "rdf-ext": "^2",
     "sparqljs": "^3.0.1",
-    "standard": "^17.0.0",
     "string-to-stream": "^3.0.1",
     "ts-node": "^10.9.1",
     "typedoc": "^0.17.7",
