--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   ],
   "dependencies": {
     "@rdfjs/types": "*",
-    "@zazuko/env": "1 - 2",
+    "@zazuko/env": "^2",
     "@zazuko/prefixes": ">=1"
   },
   "devDependencies": {
