--- a/package.json
+++ b/package.json
@@ -27,21 +27,27 @@
   ],
   "dependencies": {
     "@rdfjs/types": "*",
-    "@zazuko/env": "^2.0.3",
-    "@zazuko/prefixes": ">=1"
+    "@rdfjs/data-model": "^2.0.0",
+    "@rdfjs/environment": "^1.0.0",
+    "@rdfjs/term-map": "^2.0.0",
+    "@zazuko/prefixes": ">=1",
+    "@tpluscode/rdf-ns-builders": ">=3"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.1",
     "@rdfjs/formats": "^4",
     "@tpluscode/eslint-config": "^0.4.2",
-    "@tpluscode/rdf-ns-builders": "^4",
     "@types/chai": "^4.3.4",
     "@types/chai-snapshot-matcher": "^1",
+    "@types/rdfjs__environment": "^1.0.0",
+    "@types/rdfjs__data-model": "^2.0.7",
+    "@types/rdfjs__term-map": "^2.0.9",
     "@types/luxon": "^1.24.0",
     "@types/mocha": "^10.0.1",
     "@types/sparqljs": "^2.1.1",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
+    "@zazuko/env": "^2.0.6",
     "c8": "^7.13.0",
     "chai": "^4.3.7",
     "chai-snapshot-matcher": "^2.0.3",
